force-app/main/default/objects/object97__c/object97__c.object-meta.xml
<CustomObject>
    <label>Object97</label>
    <nameField>
        <label>NameField</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objects97</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>