force-app/main/default/objects/object97__c/fields/testfield186__c.field-meta.xml
<CustomField>
    <fullName>testfield186__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Test</description>
    <label>testfield186</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>object97_testfield186s</relationshipLabel>
    <relationshipName>object97_testfield186s</relationshipName>
    <type>Lookup</type>
</CustomField>