force-app/main/default/objects/object97__c/fields/testfield196__c.field-meta.xml
<CustomField>
    <fullName>testfield196__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Test</description>
    <label>testfield196</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>object97_testfield196s</relationshipLabel>
    <relationshipName>object97_testfield196s</relationshipName>
    <type>Lookup</type>
</CustomField>