force-app/main/default/objects/object97__c/fields/testfield76__c.field-meta.xml
<CustomField>
    <fullName>testfield76__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Test</description>
    <label>testfield76</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>object97_testfield76s</relationshipLabel>
    <relationshipName>object97_testfield76s</relationshipName>
    <type>Lookup</type>
</CustomField>